@@ -1,5 +1,11 @@
 2009-07-07  Doug Evans  <dje@sebabeach.org>
 
+	* cgen-opc.scm (-opc-file-path,opc-file-path): Move to opcodes.scm
+	(opc-arguments, -OPC): Call set-opc-file-path!.
+	* opcodes.scm (-opc-file-path,opc-file-path): Moved here.
+	(set-opc-file-path!): New function.
+	* dev.scm: Mention set-opc-file-path!.  Mention doc options.
+
 	* opc-ibld.scm (gen-insn-builder): Convert symbols to strings
 	before passing to gen-c-args.
 
